[gd_scene load_steps=2 format=2]

[ext_resource path="res://prefabs/ui/settings/settings_menu.gd" type="Script" id=1]

[node name="SettingsMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 358.0
margin_top = 136.0
margin_right = 601.0
margin_bottom = 404.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButtonOrbitCircles" type="CheckButton" parent="VBoxContainer"]
margin_right = 243.0
margin_bottom = 40.0
text = "Show obits circles"

[node name="CheckButtonPlanetArea" type="CheckButton" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 243.0
margin_bottom = 84.0
text = "Always show planet area"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButtonShowFPS" type="CheckButton" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 243.0
margin_bottom = 128.0
text = "Show frames per seconds"

[node name="CheckButtonVSync" type="CheckButton" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 243.0
margin_bottom = 172.0
disabled = true
text = "VSync"

[node name="HBoxFPS" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 243.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxFPS"]
margin_top = 5.0
margin_right = 165.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Frames per second cap"

[node name="SpinBoxFps" type="SpinBox" parent="VBoxContainer/HBoxFPS"]
margin_left = 169.0
margin_right = 243.0
margin_bottom = 24.0
max_value = 1000.0
align = 2

[node name="CheckButtonDebug" type="CheckButton" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 243.0
margin_bottom = 244.0
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="VBoxContainer"]
margin_top = 248.0
margin_right = 243.0
margin_bottom = 268.0
text = "Back"

[connection signal="toggled" from="VBoxContainer/CheckButtonOrbitCircles" to="." method="_on_show_orbit_circles"]
[connection signal="toggled" from="VBoxContainer/CheckButtonPlanetArea" to="." method="_on_show_planet_area"]
[connection signal="toggled" from="VBoxContainer/CheckButtonShowFPS" to="." method="_on_show_fps"]
[connection signal="toggled" from="VBoxContainer/CheckButtonVSync" to="." method="_on_vsync"]
[connection signal="value_changed" from="VBoxContainer/HBoxFPS/SpinBoxFps" to="." method="_on_fps"]
[connection signal="toggled" from="VBoxContainer/CheckButtonDebug" to="." method="_on_is_debug"]
[connection signal="pressed" from="VBoxContainer/ButtonBack" to="." method="_on_back"]
